samples/_failures_safe/1761603403_2c1718_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e9726c46.c: In function ‘main’:
./samples/SAFE/__tmp_e9726c46.c:154:17: error: expected expression at end of input
  154 |                 int status = add_matrices(&a, &
      |                 ^~~
./samples/SAFE/__tmp_e9726c46.c:154:30: error: too few arguments to function ‘add_matrices’
  154 |                 int status = add_matrices(&a, &
      |                              ^~~~~~~~~~~~
./samples/SAFE/__tmp_e9726c46.c:95:5: note: declared here
   95 | int add_matrices(const Matrix* a, const Matrix* b, Matrix* result) {
      |     ^~~~~~~~~~~~
./samples/SAFE/__tmp_e9726c46.c:154:17: error: expected declaration or statement at end of input
  154 |                 int status = add_matrices(&a, &
      |                 ^~~
./samples/SAFE/__tmp_e9726c46.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e9726c46.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e9726c46.c:154:17: error: expected declaration or statement at end of input
